--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <!-- ------------------------------------------------------------------------------------------------------ -->
             <!-- Setting version                                                                                        -->
             <!-- ------------------------------------------------------------------------------------------------------ -->
-            <div class="header item"><p>Web Version 2.3.0</p></div>
+            <div class="header item"><p>Web Version 2.3.1</p></div>
             <div class="header item">Theme</div>
             <div class="item btn_theme_color" theme="theme-blue">
                 <a class="ui blue empty circular label tiny"></a> Blue
@@ -209,7 +209,7 @@
         <div style="padding:  0 20px;">
             <div class="menu jsonStyleForm">
                 <div>
-                    <label for="showGuidLine">Show guild line</label>
+                    <label for="showGuidLine">Show guid line</label>
                 </div>
                 <div class="ui fitted slider checkbox checked">
                     <input type="checkbox" id="showGuidLine" name="newsletter" checked>
