--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         </div>
                     </div>
                     <div class="right menu">
-                        <p class="download_file_ext" style="margin: 8px"><a href="https://github.com/Khawmean-hub/kosign_url_decode_json/raw/main/data/URL%20Decode%20desktop%20v2.3.2.exe" download="URL Decode desktop v2.3.2.exe" style="cursor: pointer;">Download</a> Desktop offline version 2.3.2</p>
+                        <p class="download_file_ext" style="margin: 8px; display: none;"><a href="https://github.com/Khawmean-hub/kosign_url_decode_json/raw/main/data/URL%20Decode%20desktop%20v2.3.2.exe" download="URL Decode desktop v2.3.2.exe" style="cursor: pointer;">Download</a> Desktop offline version 2.3.2</p>
                         <div class="ui icon dropdown button circular cus_btn">
                             <i class="cog icon"></i>
                             <!-- <div class="menu">
@@ -347,7 +347,7 @@
                                                         data-position="right center"
                                                         class="ui button icon btn_color_light"><i
                                                             class="paste icon"></i></div>
-                                                    <input type="text" class="input_have_clear" id="url_text" placeholder="Paste url encode here">
+                                                    <input type="text" class="input_have_clear" id="url_text" placeholder="Paste encode, json or object here">
                                                     <i class="close link icon btn_clear_its_input" style="display: none;"></i>
                                                 </div>
                                             </div>
