fixed bugs5 search json

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                                                 above to show</small>
                                         </div>
 
-                                        <div style="text-align: right;">
+                                        <div style="text-align: right;padding-top: 5px;">
                                             <button class="ui button tiny btn_color_light disabled" data-position="top right" data-inverted="" data-tooltip="Move to Text Compare Tab"
                                                 id="btn_compare_json">Compare</button>
                                             <div class="ui icon buttons tiny right floated">
