--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                                             <button class="ui icon button btn_color_light mini dropdown" style="height: 30.84px; width: 30.84px; padding-top: 10px">
                                                 <i class="ui icon setting"></i>
                                                  <div class="menu">
-                                                    <div class="item btn_clear_data"><i class="ui trash icon"></i> Clear All Data</div>
+                                                    <div class="item btn_clear_data">Clear All Data</div>
                                                 </div>
                                             </button>
                                         </div>
