--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                         </div>
                     </div>
                     <div class="right menu">
-                        <p class="download_file_ext" style="margin: 8px; display: none;"><a href="https://github.com/Khawmean-hub/kosign_url_decode_json/raw/main/data/URL%20Decode%20desktop%20v2.3.2.exe" download="URL Decode desktop v2.3.2.exe" style="cursor: pointer;">Download</a> Desktop offline version 2.3.2</p>
+                        <p class="download_file_ext" style="margin: 8px; display: none;"><span style="margin-right: 7px; display: none;" modifydate="2025-09-29" id="exe_update" class="ui orange label mini">New</span><a href="https://github.com/Khawmean-hub/kosign_url_decode_json/raw/main/data/URL%20Decode%20desktop%20v2.4.0.exe" download="URL Decode desktop v2.4.0.exe" style="cursor: pointer;">Download</a> Desktop offline version 2.4.0</p>ain/data/URL%20Decode%20desktop%20v2.3.2.exe" download="URL Decode desktop v2.3.2.exe" style="cursor: pointer;">Download</a> Desktop offline version 2.3.2</p>
                         <div class="ui icon dropdown button circular cus_btn">
                             <i class="cog icon"></i>
                             <!-- <div class="menu">
